# Aryafatthurahman4

./: .gitignore  cleanup_and_commit.ps1  clone_all.ps1  force_cleanup.ps1  home_hub.php  index.php  push_to_github.ps1  setup_git_repos.bat
AryaFatthurahman1/: README.md
Aryafatthur5/: App.tsx  README.md  index.html  metadata.json  package.json
Aryafatthur5/components/: Background.tsx  CosmicSkills.tsx  FinalTranscendence.tsx  GenesisPortal.tsx  IdentityField.tsx  PhilosophyMind.tsx  ProjectStations.tsx
DarkUniverse/: cookie.txt  dashboard.php  db.php  index.php  init.sql  login.php  register.php  styles.css
Facetology/: index.php
Facetology/database/: facetology.sql
MIA-Migrant-Indonesia-Assistant/: README.md  metadata.json
Machine Learning + API Databases/: ABOUT_IMPORT_WARNINGS.md  COMPLETION_SUMMARY.md  INDEX.md  QUICKSTART.md  README.md  SETUP.py  SETUP_COMPLETE.txt  VERIFICATION_CHECKLIST.md  index.php  requirements.txt  run_api.bat  run_examples.bat  setup.bat
Machine Learning + API Databases 1/: index.php
Mobile Computing Flutter/: .gitignore  00_START_HERE_FIRST.txt  COMPLETE_SOLUTION.md  LARAGON_RUN_ME_FIRST.txt  RINGKASAN_DATABASE.md  index.html  pubspec.yaml  server.py
Modern-City1/: README.md  index.html
ProjectGranite4/: README.md  race_telemetry_copilot.py  requirements.txt
ProjectHotel_Luxury/: index.php  pubspec.yaml
QuantumPennyLane/: README.md  conftest.py  pyproject.toml
QuantumPennyLane/src/pytest_quantum/: __init__.py  assertions.py  fixtures.py  plugin.py  random.py  statistics.py  syrec_integration.py
QuantumPennyLane/src/pytest_quantum.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
QuantumPennyLane/tests/: test_assertions.py  test_pennylane_examples.py  test_plugin.py  test_qiskit_examples.py
Toko_Barang1/: index.php
UAS-Pemrograman-Web-Lanjutan/: # UAS-Pemrograman-Web-Lanjutan README.md  database.sql
Website-Personal/: Index.html  booking.html  config.php  contact.html  functions.php  mybookings.html  tours.html
WebsiteBaru/: README.md  framework-showcase.html  index.html  index.php  package-lock.json  package.json  script.js  styles.css  subset_dataset.py
antigravity-hub/: index.html  package-lock.json  package.json  tailwind.config.js
antigravity-quantum-hackathon/: README.md  index.php  next.config.js  package-lock.json  package.json  tailwind.config.ts
antigravity-quantum-hub/: index.php
antigravity-superhub/: index.php  quantum_lab.php
mobile-computing-flutter/: OPEN_WEBSITE.bat  PANDUAN_SETUP.md  README.md  fix_laragon_host.ps1  index.php
osave-db-project/: database.sql  index.html  plan.md
osave-laravel/: .env.example  ANALYSIS.md  DATABASE_STRUCTURE.md
shared/: portal-theme.css  portal.js  portal_helpers.php
(+311 files in other folders)
